<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/desc"
        android:src="@drawable/terait"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:background="@drawable/round_edittext">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/desc"
            android:src="@drawable/ic_person"/>

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/et_username"
            android:inputType="text"
            android:hint="@string/et_username"

            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:background="@android:color/transparent"
            android:importantForAutofill="no" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:background="@drawable/round_edittext">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/desc"
            android:src="@drawable/ic_lock"/>

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/et_password"
            android:inputType="textPassword"
            android:hint="@string/et_password"

            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:background="@android:color/transparent"
            android:importantForAutofill="no" />
    </LinearLayout>


    
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:id="@+id/bt_submit"
        android:text="@string/submit"
        android:textColor="@android:color/white"
        android:background="@drawable/round_button"/>



</LinearLayout>